# dms

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  helpers.sh  mkdocs.yml  pyproject.toml  shell.nix
.github/workflows/: ci.yml  docker.yml  docs.yml  duckui.yml  pre-commit.yml
caddy/: Caddyfile  Caddyfile.dev  Dockerfile
data/data-manager-role/: coverage.xml
data/dependabot/uv/cryptography-46.0.5/: coverage.xml
data/dependabot/uv/cryptography-46.0.6/: coverage.xml
data/dependabot/uv/cryptography-46.0.7/: coverage.xml
data/dependabot/uv/cryptography-48.0.1/: coverage.xml
data/dependabot/uv/django-5.2.11/: coverage.xml
data/dependabot/uv/django-5.2.12/: coverage.xml
data/dependabot/uv/django-5.2.13/: coverage.xml
data/dependabot/uv/django-6.0.6/: coverage.xml
data/dependabot/uv/django-allauth-65.14.1/: coverage.xml
data/dependabot/uv/djangorestframework-simplejwt-5.5.1/: coverage.xml
data/dependabot/uv/filelock-3.20.3/: coverage.xml
data/dependabot/uv/gitpython-3.1.47/: coverage.xml
data/dependabot/uv/gitpython-3.1.52/: coverage.xml
data/dependabot/uv/idna-3.15/: coverage.xml
data/dependabot/uv/mistune-3.3.0/: coverage.xml
data/dependabot/uv/pyasn1-0.6.2/: coverage.xml
data/dependabot/uv/pyasn1-0.6.3/: coverage.xml
data/dependabot/uv/pyasn1-0.6.4/: coverage.xml
data/dependabot/uv/pygments-2.20.0/: coverage.xml
data/dependabot/uv/pyjwt-2.12.0/: coverage.xml
data/dependabot/uv/pyjwt-2.13.0/: coverage.xml
data/dependabot/uv/pymdown-extensions-10.21.3/: coverage.xml
data/dependabot/uv/pytest-9.0.3/: coverage.xml
data/dependabot/uv/python-ldap-3.4.5/: coverage.xml
data/dependabot/uv/requests-2.32.4/: coverage.xml
data/dependabot/uv/requests-2.33.0/: coverage.xml
data/dependabot/uv/setuptools-83.0.0/: coverage.xml
data/dependabot/uv/slippers-0.6.3/: coverage.xml
data/dependabot/uv/sqlparse-0.5.4/: coverage.xml
data/dependabot/uv/urllib3-2.6.3/: coverage.xml
data/dependabot/uv/virtualenv-20.36.1/: coverage.xml
data/dependabot/uv/werkzeug-3.1.6/: coverage.xml
data/devel/: coverage.xml
data/dmps-members/: coverage.xml
data/featured/: coverage.xml
data/main/: coverage.xml
data/services-table-link/: coverage.xml
docs/: index.md  schema.yml
docs/dev/: api.md  reference.md  setup.md  structure.md
docs/user/: datasets.md  project.md  services.md  users.md
flows/: sync_project_v2.yaml  sync_projects.py
nginx/: default-nginx.conf
rustfs-setup/: Dockerfile  setup.sh
scripts/: update-deps.sh
src/catalog/: manage.py
src/catalog/core/: apps.py  autocomplete.py  router.py  storages.py  tasks.py  urls.py  wsgi.py
src/catalog/core/settings/: base.py  local.py  production.py
src/catalog/projects/: admin.py  apps.py  autocomplete.py  filters.py  models.py  rules.py  tables.py  urls.py  views.py
src/catalog/projects/migrations/: 0001_initial.py  0002_project_dmp_projectsconfiguration.py
src/catalog/surveys/: apps.py  tables.py  views.py
src/catalog/surveys/migrations/: 0001_initial.py
src/catalog/templates/: base_filter.html
src/catalog/theme/: apps.py
src/catalog/users/: admin.py  apps.py  autocomplete.py  forms.py  models.py
src/catalog/users/migrations/: 0001_initial.py
src/dms/: manage.py
src/dms/core/: apps.py  autocomplete.py  context_processors.py  models.py  router.py  tasks.py  urls.py  wsgi.py
src/dms/core/helpers/: import_export.py  s3client.py
src/dms/core/migrations/: 0001_initial.py  0002_alter_genericstringtaggeditem_object_id.py
src/dms/core/nina/: adapters.py
src/dms/core/settings/: base.py  local.py  production.py  test.py
src/dms/core/templatetags/: language_tags.py  utils.py
src/dms/datasets/: admin.py  apps.py  autocomplete.py  conf.py  enums.py  filters.py  forms.py  models.py  resources.py  rules.py  schemas.py  tables.py  tasks.py  urls.py  views.py
src/dms/datasets/api/: serializers.py  views.py
src/dms/datasets/libs/: inference.py
src/dms/datasets/migrations/: 0001_initial.py  0002_dataset_embargo_end_date_dataset_tags_resource_tags_and_more.py  0003_alter_dataset_id.py  0004_alter_datasetrelationship_type.py  0005_remove_partitionedresource_name_and_more.py  0006_resource_is_metadata_manual.py  0007_resource_user_metadata_alter_resource_metadata.py
src/dms/datasets/schemas/: __init__.py
src/dms/datasets/tests/: test_embargo.py  test_models.py  test_rules.py  test_views.py
src/dms/frontend/: .oxfmtrc.json  .prettierrc.json  apps.py  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  views.py  vite.config.ts
src/dms/nva/: apps.py  forms.py  models.py  urls.py  views.py
src/dms/projects/: admin.py  apps.py  autocomplete.py  filters.py  forms.py  models.py  rules.py  tables.py  urls.py  views.py
src/dms/projects/api/: serializers.py  views.py
src/dms/projects/libs/: render_latex.py
src/dms/projects/migrations/: 0001_initial.py  0001_initial_squashed.py  0002_project_dmp_projectsconfiguration.py  0002_remove_projectmembership_unique_user_per_project_and_more.py  0003_alter_project_tags.py  0004_remove_project_dmp_dmp.py  0005_alter_dmp_project_alter_project_status.py  0006_alter_project_status.py  0007_projecttopic_project_topics.py  0008_dmp_external_file_dmp_external_reference.py  0009_dmp_featured_at.py  0010_alter_project_tags.py  0011_dmp_schema.py  0012_dmpschema_dmp_schema_from.py
src/dms/projects/tests/: test_forms.py  test_models.py  test_render_latex.py  test_rules.py  test_views.py
src/dms/services/: admin.py  apps.py  autocomplete.py  filters.py  models.py  tables.py  urls.py  views.py
src/dms/services/migrations/: 0001_initial.py  0002_service_projects.py  0003_alter_service_projects.py  (+2 more)
src/dms/shared/: views.py
src/dms/surveys/: apps.py  forms.py  models.py  urls.py  views.py
src/dms/templates/: base.html  base_delete.html  base_filter.html
src/dms/theme/: apps.py  forced_classes.py  views.py
src/dms/uploads/: admin.py  apps.py  models.py  tasks.py
src/dms/users/: adapters.py  apps.py  models.py
(+151 files in other folders)
