[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "Werkzeug[watchdog]",
  "ipdb",
  "pre-commit",
  "django-debug-toolbar",
  "django-extensions",
  "ruff",
  "django-migration-linter",
  {include-group = "test"},
  {include-group = "docs"},
  "python-semantic-release>=10.5.3"
]
docs = ["mkdocs", "mkdocs-material", "pymdown-extensions", "neoteroi-mkdocs", "mkdocstrings[python]"]
ldap = ["python-ldap", "django-auth-ldap"]
prod = ["gunicorn", {include-group = "ldap"}]
test = [
  "pytest",
  "pytest-sugar",
  "pytest-django",
  "coverage",
  "factory-boy",
  "django-coverage-plugin"
]

[project]
authors = [{name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"}]
dependencies = [
  "django>=5.2",
  "python-slugify>=8.0.1",
  "Pillow==11.1.0",
  "argon2-cffi",
  "psycopg[binary,pool]>=3.2.4",
  "backoff",
  "requests",
  # django-utils
  "django-health-check",
  "django-probes",
  "django-environ",
  "django-model-utils",
  "django-appconf>=1.0.6",
  "django-cors-headers>=4.3.1",
  "django-lifecycle",
  "django-postgres-extra",
  "django-polymorphic>=3.1.0",
  "rules>=3.3",
  "django-filter>=24.2",
  "django-widget-tweaks",
  "django-deprecate-fields",
  # django-utils-app
  "django-solo",
  # auth
  "django-allauth==65.13.0",
  "django-allauth-ui==1.7.1",
  # ui
  "django-crispy-forms",
  "fontawesomefree",
  "slippers",
  "crispy-tailwind",
  "django-tailwind",
  "django-tables2",
  "django-leaflet",
  # rest
  "django-rest-framework>=0.1.0",
  "drf-spectacular>=0.27.2",
  "drf-nested-routers",
  "dj-rest-auth",
  "drf-standardized-errors[openapi]",
  "djangorestframework-simplejwt",
  # gis
  "gdal==3.11.2",
  "pyproj",
  # queue
  "procrastinate[django]>=3.0.0",
  "setuptools>=75.8.0",
  "django-storages[s3]>=1.14.5",
  "boto3>=1.40.4",
  "django-taggit>=6.1.0",
  "django-autocomplete-light>=3.11.0",
  "django-view-breadcrumbs>=2.5.1",
  "django-auditlog>=3.0.0",
  "django-import-export>=4.3.7",
  "sentry-sdk>=1.40.5",
  "django-autoslug>=1.9.9",
  "pyjwt[crypto]>=2.9.0",
  "django-jsonform>=2.23.2",
  "django-svelte-jsoneditor>=0.4.4",
  "django-hijack",
  "django-cotton>=2.0.3",
  "django-htmx>=1.23.0",
  "pylatex",
  "langdetect",
  "django-vite",
  "djangorestframework-gis",
  "mistune"
]
description = "Add your description here"
license = {text = "GPLv3"}
name = "dms"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.scripts]
dms = "dms.manage:main"
"manage.py" = "dms.manage:main"

# ==== Coverage ====
[tool.coverage.run]
include = ["metadata_dmsue/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

# ==== mypy ====
[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
# Django migrations should not produce any errors:
module = "*.migrations.*"

[tool.pylint]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.FORMAT]
max-line-length = 119

# ==== PyLint ====
[tool.pylint.MASTER]
django-settings-module = "config.settings.local"
load-plugins = ["pylint_django"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["missing-docstring", "invalid-name"]

[tool.pylint.TYPECHECK]
generated-members = [
  "REQUEST",
  "acl_users",
  "aq_parent",
  "[a-zA-Z]+_set{1,2}",
  "save",
  "delete"
]

# ==== pytest ====
[tool.pytest.ini_options]
addopts = "--ds=dms.core.settings.test --reuse-db"
minversion = "6.0"
python_files = ["tests.py", "test_*.py"]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "ANN"]
"**/tests/*.py" = ["S101"]

[tool.semantic_release]
add_partial_tags = false
allow_zero_version = false
assets = []
build_command_env = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
no_git_verify = false
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.changelog]
changelog_file = ""
exclude_commit_patterns = []
insertion_flag = "<!-- version list -->"
mode = "update"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
mask_initial_release = true
output_format = "md"

[tool.semantic_release.changelog.environment]
autoescape = false
block_end_string = "%}"
block_start_string = "{%"
comment_end_string = "#}"
comment_start_string = "{#"
extensions = []
keep_trailing_newline = false
lstrip_blocks = false
newline_sequence = "\n"
trim_blocks = false
variable_end_string = "}}"
variable_start_string = "{{"

[tool.semantic_release.commit_author]
default = "semantic-release <semantic-release>"
env = "GIT_COMMIT_AUTHOR"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0
ignore_merge_commits = true
minor_tags = ["feat"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
parse_squash_commits = true
patch_tags = ["fix", "perf"]

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.semantic_release.remote]
ignore_token_for_push = false
insecure = false
name = "origin"
type = "github"

[tool.uv]
no-binary-package = ["fiona"]
